--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <model-viewer 
-      src="tunel_vale2_belem.glb" 
+      src="tunel_vale2 _belem.glb" 
       ar 
-      ar-modes="webxr scene-viewer quick-look" 
+      ar-modes="scene-viewer webxr quick-look" 
       camera-controls 
       style="width: 100%; height: 100vh;">
+      
+      <!-- Botão de AR -->
       <button slot="ar-button" style="
         position: absolute;
         bottom: 16px;
@@ -26,6 +28,7 @@
         cursor: pointer;">
         Ver em AR
       </button>
+
     </model-viewer>
 </body>
 </html>
