--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
     <model-viewer 
       src="tunel_vale2 _belem.glb" 
       ar 
+      ar-modes="webxr scene-viewer quick-look" 
+      camera-controls 
+      style="width: 100%; height: 100vh;">
+      <button slot="ar-button" style="
+        position: absolute;
+        bottom: 16px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 12px 16px;
+        font-size: 18px;
+        background-color: #008CBA;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;">
+        Ver em AR
+      </button>
+    </model-viewer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <title>Modelo 3D em AR</title>
+    <script type="module" src="https://unpkg.com/@google/model-viewer"></script>
+</head>
+<body>
+    <model-viewer 
+      src="tunel_vale2 _belem.glb" 
+      ar 
       ar-modes="scene-viewer webxr quick-look" 
       camera-controls 
       style="width: 100%; height: 100vh;">
