--- a/index.html
+++ b/index.html
@@ -59,3 +59,8 @@
     </model-viewer>
 </body>
 </html>
+<model-viewer ar camera-controls touch-action="pan-y" auto-rotate src="../../shared-assets/models/Astronaut.glb" alt="A 3D model of an astronaut">
+  <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
+      👋 Activate AR
+  </button>
+</model-viewer>
